src/scss/_global.scss
@import url(//fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:400,300,600,700,800);

html, body, main {
	// font-family: Monospace;
    font-family: sans-serif, Monospace;
	position: relative;
    width: 100%;
    margin: 0;
    font-size: 1.05rem;
	font-weight: 300;
	color: $black;
}

html {
    height: 100%;
}

body {
    height: 100%;
    min-height: 100%;
    display: grid;
    grid-template-columns: 25% 25% 25% 25%;
    grid-template-rows: 42px auto 55px;
    grid-template-areas:
        "header header header header"
        "main main main main"
        "footer footer footer footer";
    // align-content: space-between;
    background-color: $brand-gray-200;
    background-color: #F5F5F5;
}

main {
    grid-area: main;
    .main-header {
        height: 2rem;
        margin: 0;
        font-size: 1.5rem;
        padding: 0.25rem;
        text-align: center;
    }
}

a {
    color: $blue-dark;
    font-weight: 300;
	transition: all 0.3s;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
    color: #346480;
}

